--- a/index.Rmd
+++ b/index.Rmd
@@ -3,15 +3,15 @@ title: 'Decision Support Modeling for Utoy Creek'
 author: "Kyle McKay and Liya Abera"
 date: "July 2024"
 output:
+  word_document:
+    toc: yes
+    toc_depth: '5'
   html_document:
     toc: yes
     toc_depth: 5
     toc_float:
       collapsed: no
       smooth_scroll: yes
-  word_document:
-    toc: yes
-    toc_depth: '5'
 ---
 
 
@@ -21,11 +21,16 @@ Environmental Laboratory
 U.S. Army Corps of Engineers  
 Email: kyle.mckay@usace.army.mil
 
-**Model Accessibility**: An interactive version of this report may be accessed [here](https://usace-wrises.github.io/UtoyDecisions/), and the underlying numerical code for this analysis may be downloaded from [this github repository](https://github.com/USACE-WRISES/UtoyDecisions)
+**Model Accessibility**: An interactive version of this report may be accessed [here](https://usace-wrises.github.io/UtoyDecisions/). The underlying numerical code as well as an MS Word version of this analysis may be downloaded from [this github repository](https://github.com/USACE-WRISES/UtoyDecisions).
 
-**DISCLOSURE**: This website represents a preliminary and working version of decision models for a stream restoration study in Utoy Creek, Atlanta, Georgia. The project is led by the Mobile District of the U.S. Army Corps of Engineers (USACE) in partnership with the City of Atlanta. This site *DOES NOT* reflect agency findings or outcomes, and this is merely intended as documentation of methods and working notes for internal use. Please refer to the project manager for the Utoy Creek study, Alex Smith (alexandria.n.smith@usace.army.mil), for up-to-date information about the project.  
+**DISCLOSURE**: This website represents a preliminary and working version of decision models for a stream restoration study in Utoy Creek, Atlanta, Georgia. The project is led by the Mobile District of the U.S. Army Corps of Engineers (USACE) in partnership with the City of Atlanta. This site **DOES NOT** reflect agency findings or outcomes, and this is merely intended as documentation of methods and working notes for internal use. Please refer to the project manager for the Utoy Creek study, Alex Smith (alexandria.n.smith@usace.army.mil), for up-to-date information about the project. A final version of this report will ultimately be included as an appendix to the more detailed feasibility study report.  
 
-**THIS VERSION ONLY INCLUDES PLACEHOLDER (I.E., FAKE) DATA FOR COST. ECOLOGICAL DATA ARE ALSO BEING QUALITY CONTROLLED.**
+**MISSING DATA AND METHODS**: This analysis is missing a variety of information prior to sharing, specifically:  
+- Check that the objectives presented in Section 2.1 align with project objectives.  
+- This version only includes placeholder (i.e., fake) cost data.  
+- Ecological data are being quality controlled and have known erros at this point (i.e., equal riparian areas for left and right bank). Additionally, we need to revisit whether year-0 should be equal to the FWOP for all alternatives.  
+- The Utoy Instream Model is also under development and subject to change. For instance, the current version removes hydrologic metrics as well as a few geomorphic metrics (BEHI). 
+
 
 ```{r options, include=FALSE}
 #Markdown options
@@ -58,22 +63,50 @@ cost <- read.csv("Utoy_Phase 2_EcoInputs_2024-07-20_CostIn.csv", header=TRUE, de
 
 # **1. Introduction**   
 
-The Utoy Creek watershed drains the southwest portion of the City of Atlanta into the Chattahoochee River (Figure 1). This small-to-middle order stream is within the Piedmont region of the southeastern United States, and Utoy Creek exhibits many common characteristics of regional streams such as historical channel degradation due to poor sediment management as well  modern challenges like flashy runoff from urban development. The majority of UC’s watershed is situated within the City of Atlanta’s boundaries; however, downstream portion of the watershed are within Fulton County. Two main tributaries, North and South Utoy Creeks, unite to form the main stem approximately five miles upstream the Chattahoochee River (EPA, 2016). The total combined length of the main stem and primary tributaries is approximately 22 miles (Walker, 2016).  Including sub-tributaries, the total length of stream is over 50 miles in the UC watershed. The total drainage basin is approximately 33.7 square miles with 64% developed and 18% impervious.  
+The Utoy Creek watershed drains the southwest portion of the City of Atlanta into the Chattahoochee River (Figure 1). This small-to-middle order stream is within the Piedmont region of the southeastern United States, and Utoy Creek exhibits many common characteristics of regional streams such as historical channel degradation due to poor sediment management as well  modern challenges like flashy runoff from urban development. The majority of Utoy Creek's watershed is situated within City of Atlanta boundaries; however, downstream portions of the watershed are within Fulton County. Two main tributaries, North and South Utoy Creeks, unite to form the main stem approximately five miles upstream the Chattahoochee River (EPA, 2016). The total combined length of the main stem and primary tributaries is approximately 22 miles (Walker, 2016).  Including sub-tributaries, the total length of stream is over 50 miles in the Utoy Creek watershed. The total drainage basin is approximately 33.7 square miles with 64% developed and 18% impervious.  
 
 ![*Figure 1. Overview of the Utoy Creek watershed.*](Utoy_Watershed_Map.png)
 
-In partnership with the City of Atlanta, the USACE's Mobile District is leading a feasibility study of potential stream restoration actions in the Utoy Creek watershed. The study is authorized through the USACE's continuing authorities program for aquatic ecosystem restoration (Section 206, WRDA 1996). In summer 2023, the project development team conducted preliminary project planning activities such as identification of problems and opportunities, setting ecosystem restoration objectives, and screening potential restoration sites. From fall 2023 to summer 2024, the project development team advanced restoration planning through actions such as field data collection, design of alternatives, ecological modeling, cost estimation, and public and interagency meetings. This report summarizes various aspects of these activities for the purpose of informing restoration decisions and recommendations for the study as a whole. Specifically, this document presents cost-effectiveness and incremental cost analyses to guide development of the agency's recommended restoration plan.
+In partnership with the City of Atlanta, the USACE's Mobile District is leading a feasibility study of potential stream restoration actions in the Utoy Creek watershed. The study is authorized through the USACE's continuing authorities program for aquatic ecosystem restoration (Section 206, WRDA 1996). In summer 2023, the project development team conducted preliminary project planning activities such as identification of problems and opportunities, setting ecosystem restoration objectives, and screening potential restoration sites. From fall 2023 to summer 2024, the project development team advanced restoration planning through actions such as field data collection, design of alternatives, ecological modeling, cost estimation, analysis of socio-economic benefits, and public and interagency meetings. This report summarizes various aspects of these activities for the purpose of informing restoration decisions and recommendations for the study as a whole. Specifically, this document presents cost-effectiveness and incremental cost analyses to guide development of the agency's recommended restoration plan.
 
-Cost-effectiveness and incremental cost analyses (CEICA) are a set of methods for comparing non-monetary ecological benefits with monetary investment costs. Cost-effectiveness analysis provides a mechanism for examining the efficiency of alternative actions (Robinson et al. 1995). An "efficiency frontier" identifies all plans that efficiently provide benefits on a *per cost basis*. Incremental cost analysis is conducted on the set of cost-effective plans. This technique sequentially compares each plan to all higher cost plans to reveal changes in unit cost as output levels increase and eliminates plans that do not efficiently provide benefits on an *incremental unit cost basis*. Collectively, these techniques help USACE planning teams ass the question of "Is the next increment of ecological benefit worth the next increment of investment cost?"
+Cost-effectiveness and incremental cost analyses (CEICA) are a set of methods for comparing non-monetary ecological benefits with monetary investment costs. Cost-effectiveness analysis provides a mechanism for examining the efficiency of alternative actions (Robinson et al. 1995). An "efficiency frontier" identifies all plans that efficiently provide benefits on a *per cost basis*. Incremental cost analysis is conducted on the set of cost-effective plans. This technique sequentially compares each plan to all higher cost plans to reveal changes in unit cost as output levels increase and eliminates plans that do not efficiently provide benefits on an *incremental unit cost basis*. Collectively, these techniques help USACE planning teams assess the question of "Is the next increment of ecological benefit worth the next increment of investment cost?"
 
-This report applies CEICA in multiple formats to inform decisions in the Utoy Creek watershed. In Chapter 2, the basic strategy of restoration plan formulation is presented along with an overview of ecological benefits and cost estimates. These data provide the fundamental inputs to CEICA and are presented here to contextualized decision making. Additional information on these analyses may be found in other portions of the feasibility report documents. In Chapter 3, CEICA is conducted for individual restoration sites separately to identify recommended outcomes based on ecological criteria (i.e., the authorized purpose). Chapter 4 conducts CEICA at the watershed-scale using the site-scale recommendations from the prior chapter with the goal of identifying an effective portfolio of investments including multiple sites. In Chapter 5, a more comprehenisve view of project benefits is undertaken by applying CEICA to understand the effects of portfolios of actions on social outcomes. Chapter 6 concludes with a synthesis of the recommendations from prior analyses.
+This report applies CEICA in multiple contexts to inform decisions in the Utoy Creek watershed. In Chapter 2, the overarching project planning framework is presented that includes the plan formulation strategy along with an overview of ecological benefits and cost estimates. These data provide the fundamental inputs to CEICA and are presented here to contextualize decision making. Additional information on these analyses may be found in other portions of the feasibility report documents. In Chapter 3, CEICA is conducted for individual restoration sites separately to identify recommended outcomes based on ecological criteria (i.e., the authorized purpose). Chapter 4 conducts CEICA at the watershed-scale using the site-scale recommendations from the prior chapter with the goal of identifying an effective portfolio of investments based on ecological benefits. In Chapter 5, a more comprehensive view of project benefits is undertaken by applying CEICA to understand the effects of portfolios of actions on social outcomes. Chapter 6 concludes with a synthesis of the recommendations from prior analyses.
 
 
-# **2. Plan Formulation**   
+# **2. Project Planning Framework**   
 
-Where did the alternatives come from? Describe plan formulation process. Mention the team's use of [miro](https://miro.com/app/board/uXjVN9DAdvA=/).
+Decision support modeling builds from the planning framework established for a restoration study as a whole. As such, this chapter briefly reviews major components of restoration planning in Utoy Creek. 
 
-All analyses conducted in the [R Statistical Software](https://cran.r-project.org/). 
+## *Plan Formulation Strategy*
+
+Restoration project planning sets the stage for all other design, analysis, or decision tasks. A sound plan formulation strategy clearly articulates a problem statement and objectives from which all choices about design or analysis flow (McKay et al. 2012). The USACE project development team identified objectives for the Utoy Creek restoration project through three primary means. First, USACE policies and budget criteria were used as a template for local objectives. Second, existing local plans and studies in the Utoy Creek watershed were examined. Third, project objectives were compiled from prior studies in the region (e.g., Proctor Creek and Butler Creek). Fourth, preliminary objectives were presented to technical and non-technical stakeholders at a charrette in May 2023. Based on these approaches, the following objectives were identified. 
+
+*Overarching objective: Improve instream conditions suitable for a diversity of aquatic organisms (e.g., fish, crayfish, salamanders, benthic macroinvertebrates, turtles)*.  
+- Restore channel geomorphic conditions to less disturbed conditions.  
+- Reduce sediment loading from the stream bed and banks.  
+- Increase instream habitat for a diverse assemblage of local fauna.  
+- Increase connectivity of movement corridors for aquatic species
+
+*Overarching objective: Improve riparian conditions supportive of a diverse aquatic and riparian community*.
+- Restore natural sources of organic carbon (i.e., energy) within the system.  
+- Increase floodplain connectivity to support biogeochemical cycling.  
+- Improve temperature and light regimes.  
+- Increase riparian habitat to support native biodiversity.  
+- Increase connectivity of movement corridors for riparian species
+
+*Overarching Objective: Restore flow regimes to a best attainable condition*.
+- Decrease peak flows.  
+- Decrease hydrologic flashiness.  
+- Improve watershed capacity to attenuate high flows.
+
+*Secondary Objectives: Pursue socio-economic outcomes while restoring instream and riparian systems*.  
+- Increase resiliency to disturbances (e.g., watershed development, climate change, large floods).  
+- Promote social benefits and equity.  
+- Promote aesthetics and recreation.  
+- Improve water quality (e.g., TSS, zinc, nutrients).
+
+In pursuit of these objectives, different information was required as planning proceeded from early watershed problem screening to feasibility-level design. The USACE project development team developed a three-phase approach to analysis of the Utoy Creek watershed restoration (Table 1). In phase 1, activities focused on screening sites to a focal set of locations aligned with USACE objectives. This phase used a suite of high-level assumptions and preliminary data on ecological benefits and costs to reduce 60+ potential restoration locations to a more workable 20 sites for more detailed analysis. Phase 2 focused on feasibility-scale analysis of these 20 sites including collection of additional field and analytical data, development of conceptual designs, execution of ecological models, and estimation of cost. This phase ultimately focused on producing site-scale recommendations of restoration actions. Phase 3 examined the portfolio of recommended actions at the watershed-scale, which analysis of ecological outcomes as well as other project effects (i.e., development of a narrative about the "comprehensive" socio-economic benefits of an investment). These phases required a series of assumptions regarding each analytical step, which are briefly presented in Table 1. Additional information on discipline-specific assumptions can be found elsewhere in feasibility documents.
 
 ```{r echo=FALSE}
 #Create empty table
@@ -93,22 +126,27 @@ Table01[9,] <- c("National Economic Development", "None", "None", "None")
 
 #Send output table rows into a single matrix
 rownames(Table01) <- NULL
-knitr::kable(Table01, caption="Table 1. Overview of the two-phase approach to Utoy Creek analyses.", align="c") 
+knitr::kable(Table01, caption="Table 1. Overview of the three-phase approach to Utoy Creek analyses.", align="c") 
 ```
 
 
+This report focuses on examining the relative merits of different restoration actions at a site-scale as well as the merits of those actions at a watershed-scale. Decision-analysis is intimately tied to the development of decision alternatives (i.e., one never recommends an alternative not considered). Therefore, the plan formulation strategy is briefly reviewed for the site- and watershed-scale activities (i.e., Phases 2 and 3). For each potential restoration site, the entirety of the site was visited by walking the length of the reach in large interdisciplinary teams. During these visits, preliminary restoration concepts were discussed and appropriate measures were identified. Following field activities, a series of working meetings were conducted to refine these ideas into conceptual alternatives. The interactive software miro was used to facilitate input and notes from all disciplines and team members. These [miro boards](https://miro.com/app/board/uXjVN9DAdvA=/) served as a knowledge gathering space for conceptual alternatives. Site-scale actions were then formalized into design-oriented formats to asses quantities of restoration needed for ecological and cost models. Site-scale recommendations were developed independently (Chapter 3), and then all permutations of sites were considered at the watershed scale (Chapters 4 and 5).
+
 ## *Ecological Models*
 
-Where did benefits come from? Describe models briefly (FIGURE). Include data in an appendix.  
+Given a set of site-scale alternatives, an analysis of ecological benefits is required to quantitatively compare the relative merits of actions. For Utoy Creek, two ecological models were used to assess instream and riparian outcomes with the intent of directly aligning models with the project objectives identified above (Figure 2). The Utoy Instream Model (UIM) was developed for this project to capture all aquatic benefits, and the domain of this model can be conceptualized as everything from streambank-to-streambank. The Riparian Ecosystem Function Index (REFI) is a generic ecological model being developed by ERDC (Wiest et al. *Forthcoming*) with the explicit goal of assessing the ecological importance and integrity of riparian zones, which can be conceptualized as everything from the top-of-bank outward.
 
-![*Figure 2. Overview of the structure of ecological models used in the Utoy Creek study to quantify ecological benefits.*](Utoy_Decision_Figures_2024-07-20_ModelOverview.png)
+![*Figure 2. Overview of the general structure of ecological models used in the Utoy Creek study to quantify ecological benefits.*](Utoy_Decision_Figures_2024-07-20_ModelOverview.png)
 
-Paragraph on REFI. Three modules. Averaged. 
+The Riparian Ecosystem Function Index (REFI) was developed as a rapid method for quantifying ecological benefits of riparian zones. Specifically, the model was designed to complement a [huge variety of stream models](https://gtmenichino.github.io/RiverEngineeringResources/assessment), which typically consider riparian zones only as a benefit to stream functions (rather than as ecologically beneficial in their own right). The model assesses outcomes relative to three overarching functions, which result in module-scale indices that are then arithmetically averaged into an overaching index (i.e., a zero to one metric of quality). The first module focuses on a traditional notion of riparian zones tied to stream functions and addresses issues such as hydrology attenuation and nutrient uptake. The second module addresses the role of riparian areas as habitats for unique assemblages of organisms. The third module examine the role of riparian areas as migratory pathways for organisms moving laterally from channel to floodplain (e.g., salamanders) as well as longitudinally along river corridors. 
 
-Paragraph on Utoy Instream Model (UIM). 
+The Utoy Instream Model (UIM) was developed for this feasibility study to closely align quantitative outcomes with project objectives. The models are directly tied to and built from ecological models used to quantify restoration outcomes in the neighboring Proctor Creek watershed (McKay et al. 2018ab). Additional functions and outcomes were added to these models in order to align the UIM with other stream functions (Fischenich 2006) as well as newer stream assessment approaches (McKay et al. 2024). The UIM is organized around four modules, which roughly correspond to the widely used stream functions pyramid (Harman et al. 2012). For the UIM, functions related to hydrology and hydraulics were combined to better align with the USACE's budget criteria for ecosystem restoration (i.e., "hydrologic character"). 
 
-**NOTES ON CURRENT INSTREAM MODEL: HYDROLOGIC OUTCOMES ARE NOT PRESENTLY INCLUDED. GEOMORPHIC OUTCOMES DISCARD BEHI.**
+The quantitative tools for both models are described elsewhere in the feasibility report. In general, all models were documented and tested according to best practices in ecological modeling (Grant and Swannack 2008, McKay et al. 2022). Data were stored in a centralized database, which can be downloaded from [this report's github repository](https://github.com/USACE-WRISES/UtoyDecisions). Both models were executed using the [R Statistical Software](https://cran.r-project.org/), and code is available in the same repository. 
 
+Each model was executed for four points in time for all alternatives. Year-0 was assumed to be the existing condition and represents the pre-restoration, degraded condition of the site. Year-2 represents a point in time reflecting an initial increase in ecological benefits associated with the project actions. In general, this time frame reflects most instream benefits of the project, but riparian outcomes would not fully be captured. Year-10 was then assessed as a representative time frame for obtaining many of the riparian benefits of actions. Year-50 represents a fully mature site with a developed multi-story riparian canopy and instream conditions adjusted to a new dynamic equilibrium. For all sites, the future without project was assumed equal to the existing condition, which assumes no future degradation. 
+
+Instream and riparian outcomes were summarized as "habitat units" capturing the quantity and quality of the ecosystem at a given point in time. The model outputs were summed to derive a metric of the overall ecological benefit of ecosystem restoration. Table 2 presents an example of ecological model outputs for each time frame at Site-17F in the Utoy Creek watershed. 
 
 ```{r}
 #Dataset size
@@ -210,8 +248,7 @@ rownames(Table02) <- NULL
 knitr::kable(Table02, caption="Table 2. Example of ecological benefits computations for Site-17F.", align='c') 
 ```
 
-
-Describe the need for annualization. Annualization was conducted using the [ecorest](https://cran.r-project.org/web/packages/ecorest/index.html) software package. 
+Ecological models were executed for specific points in time over the project life, but decision models require a time-averaged or "annualized" metric of ecological benefit for comparison with monetary investments. Ecological outcomes were annualized using the [ecorest](https://cran.r-project.org/web/packages/ecorest/index.html) R-package (McKay and Hernandez-Abrams 2020). Figure 3 shows an example of the annualized process for two alternatives at Site-17F to demonstrate methodologically how annualization works. Additionally, all ecological outcomes are presented as the net effect of restoration actions over the future without project condition, which is frequently called "ecological lift."
 
 ```{r}
 #BENEFIT ANNUALIZATION
@@ -248,14 +285,44 @@ for(i in 1:nsites){
   #Compute lift
   AAHU$Lift[sites.AAHU.temp] <- AAHU$Total[sites.AAHU.temp] - AAHU$Total[FWOP.temp]
 }
+
+##########
+#SHOW AN EXAMPLE OF A TIME SERIES (17F)
+
+#Create plot to present annualization data
+jpeg(filename="Utoy_Annualization.jpeg", width = 6, height = 6, units = "in", res = 400)
+
+#Create the shell of the plot
+plot(c(0, 1), c(0, 1), type = "n", 
+     xlim = c(0,50), ylim = c(0,10), axes = FALSE, 
+     xlab="Time (years)", ylab="Ecological Benefit (Habitat Units)", main="")
+axis(1)
+axis(2, at = axTicks(2), labels = prettyNum(axTicks(2), big.mark = ",", scientific = FALSE), las = 0, cex.axis = 0.75, tick = TRUE)
+
+#Turn on grid lines
+grid(); box()
+
+#Add FWOP
+lines(c(0,2,10,50), eco$Utoy_HU[1:4], lwd = 2, col="black")
+points(c(0,2,10,50), eco$Utoy_HU[1:4], pch = 19, cex = 1, col = "black")
+
+#Add Alternative 1
+lines(c(0,2,10,50), eco$Utoy_HU[5:8], lwd = 2, col="blue")
+points(c(0,2,10,50), eco$Utoy_HU[5:8], pch = 19, cex = 1, col = "blue")
+
+#Add legend
+legend("bottomleft", legend = c("FWOP", "Alterantive 1"), lwd = 2, col = c("black", "blue"), bg = "white")
+
+#Turn off plot device
+dev.off()
 ```
 
 
+![*Figure 3. Example of annualization of ecological benefits for Utoy Creek Site-17F.*](Utoy_Annualization.jpeg)
+
 ## *Monetary Costs*
 
-Where did costs come from? Include data in an appendix. Describe the need for annualization. 
-
-Cost data were annualized using the [EngrEcon](https://cran.r-project.org/web/packages/EngrEcon/index.html) software package, although a [web application](https://wrises.shinyapps.io/engrecon-webapp/) also exists for conducting these calculations.
+Cost estimates were compiled for each site-scale restoration action following standard cost engineering and real estate methods. Project first cost currently represents a rough-order-of-magnitude estimate inclusive of real estate, restoration actions, pre-construction engineering and design, construction management, monitoring, and adaptive management. Monitoring and adaptive management are currently assumed to comprise 5% of total project first cost and spread over a ten-year window. Interest during construction was computed based on project first costs minus the 5% for monitoring and adaptive management with an assumed construction duration of 12-months for all actions. The FY24 Federal discount rate (2.75%) was used to annualize project first cost, interest during construction, and monitoring and adaptive management expenses over a 50-year planning horizon. Cost data were annualized using the [EngrEcon](https://cran.r-project.org/web/packages/EngrEcon/index.html) software package, although a [web application](https://wrises.shinyapps.io/engrecon-webapp/) also exists for conducting these calculations. Table 3 provides an example of cost estimates for Site-17F.
 
 ```{r}
 #COST ANNUALIZATION
@@ -303,29 +370,44 @@ colnames(cost_ann) <- c("ReachID", "SiteAction", "ProjectFirst", "Monitoring", "
   
   #Sum annualized costs
   cost_ann$Total <- cost_ann$ProjectFirst + cost_ann$Monitoring + cost_ann$AdMan + cost_ann$IDC + cost_ann$OM
+  
+##########
+#SHOW AN EXAMPLE SITE (17F)
+Table03 <- cbind(cost$ReachID, cost$SiteAction, cost$Duration_mo,
+                 formatC(cost$Project_First, format="f", digits=0, big.mark = ","),
+                 formatC(cost$Monitoring, format="f", digits=0, big.mark = ","),
+                 formatC(cost$AdMan, format="f", digits=0, big.mark = ","),
+                 formatC(cost$OM_Annual, format="f", digits=0, big.mark = ","),
+                 formatC(cost_ann$Total, format="f", digits=0, big.mark = ","))
+Table03 <- Table03[1:4,]
+colnames(Table03) <- c("Site", "Alternative", "Construction Duration (mo)", 
+                       "Project First Cost", "Monitoring Cost", "Adapative Management Cost",
+                       "OMRRR Cost", "Total Annualized Cost")
+rownames(Table03) <- NULL
+knitr::kable(Table03, caption="Table 3. Example of monetary cost data for Site-17F.", align='c') 
 ```
 
 
-## *Summary of Inputs TO CEICA*
+## *Summary of Inputs to CEICA*
 
-Is there anything interesting to say about trends in these outcomes at this stage?
+Non-monetary ecological benefits and monetary investment costs provide the primary inputs to CEICA. This chapter has examined the methods by which these outcomes were obtained, although other portions of the feasibility report provide greater detail. Table 4 summarizes the benefits and costs of all restoration actions at all sites considered in this analysis. **Is there anything interesting to say about trends in these outcomes at this stage?**
 
 ```{r}
 #SEND OUTPUT TABLE
-Table01 <- cbind(AAHU$ReachID, AAHU$SiteAction,
+Table04 <- cbind(AAHU$ReachID, AAHU$SiteAction,
                  formatC(AAHU$Total, format="f", digits=1, big.mark = ","), 
                  formatC(AAHU$Lift, format="f", digits=1, big.mark = ","), 
                  formatC(cost_present$ProjectFirst, format="f", digits=0, big.mark = ","), 
                  formatC(cost_ann$Total, format="f", digits=0, big.mark = ","))
-colnames(Table01) <- c("Site", "Alternative", "Ecological Outputs (AAHU)", "Ecological Lift (AAHU)", "Project First Cost", "Annualized Cost")
-rownames(Table01) <- NULL
-knitr::kable(Table01, caption="Table 1. Summary of benefit and cost inputs for each site-scale alternative.", align='c') 
+colnames(Table04) <- c("Site", "Alternative", "Ecological Outputs (AAHU)", "Ecological Lift (AAHU)", "Project First Cost", "Annualized Cost")
+rownames(Table04) <- NULL
+knitr::kable(Table04, caption="Table 4. Summary of benefit and cost inputs for each site-scale alternative.", align='c') 
 ```
 
 
 # **3. Site-by-site analysis**   
 
-In this section, yada yada yada. Blah, blah, blah.  
+**RESUME EDITING HERE.** In this section, yada yada yada. Blah, blah, blah.  
 
 Cost-effectiveness analysis provides a mechanism for examining the efficiency of alternative actions (Robinson et al. 1995). For any given level of investment, the agency wants to identify the plan with the most return-on-investment (i.e., the most environmental benefits for a given level of cost or the least cost for a given level of environmental benefit). An "efficiency frontier" identifies all plans that efficiently provide benefits on a *per cost basis*. 
 
@@ -558,7 +640,23 @@ Abera L. and McKay S.K. 2024. Package ‘EngrEcon’. CRAN Reference Manual.
 
 EPA. (2016). Total Maximum Daily Load Evaluation for Five Stream Segments in the Suwannee River Basin for Fecal Coliform. The Georgia Department of Natural Resources Environmental Protection Division, February.
 
+Fischenich, J.C. 2006. Functional Objectives for Stream Restoration, EMRRP Technical Notes Collection (ERDC TN-EMRRP-SR-52). U.S. Army Engineer Research and Development Center, Vicksburg, MS. http://el.erdc.usace.army.mil/elpubs/pdf/sr52.pdf.
+
+Grant, W. E., and T. M. Swannack. 2008. Ecological modeling: A common-sense approach to theory and practice. Malden, MA: Blackwell Publishing.
+
+Harman, W., Starr, R., Carter, M., Tweedy, K., Clemmons, M., Suggs, K., & Miller, C. (2012). A Function-Based Framework for Stream Assessments and Restoration Projects (EPA 843-K-12-006). US Environmental Protection Agency, Office of Wetlands, Oceans, and Watersheds.
+
 McKay S.K. and Hernández-Abrams D.D. 2020. Package ‘ecorest’. CRAN Reference Manual.
+
+McKay S.K., Linkov I., Fischenich J.C., Miller S.J., and Valverde L.J.  2012.  Ecosystem restoration objectives and metrics.  ERDC TN-EMRRP-EBA-16.  U.S. Army Engineer Research and Development Center, Vicksburg, Mississippi. 
+
+McKay S.K., Pruitt B.A., Zettle B., Hallberg N., Hughes C., Annaert A., Ladart M., and McDonald J.  2018a.  Proctor Creek Ecological Model (PCEM): Phase 1-Site screening.  ERDC/EL TR-18-11.  U.S. Army Engineer Research and Development Center, Vicksburg, Mississippi.  
+
+McKay S.K., Pruitt B.A., Zettle B.A., Hallberg N., Moody V., Annaert A., Ladart M., Hayden M., and McDonald J.  2018b.  Proctor Creek Ecological Model (PCEM): Phase 2-Benefits analysis.  ERDC/EL TR-18-11.  U.S. Army Engineer Research and Development Center, Vicksburg, Mississippi.  
+
+McKay S.K., Richards N., and Swannack T.M. 2022. Ecological model development: Evaluation of system quality.  ERDC/TN EMRRP-EBA-26.  U.S. Army Engineer Research and Development Center, Vicksburg, Mississippi. 
+
+McKay S.K., Athanasakes G., Taylor S., Miller W., Wagoner E., and Mattingly L. 2024.  Qualitative Habitat Evaluation Index for Louisville Streams (QHEILS).  ERDC/TN EMRRP-SR-92.  U.S. Army Engineer Research and Development Center, Vicksburg, Mississippi. 
 
 R Development Core Team.  2014.  R: A language and environment for statistical computing.  R Foundation for Statistical Computing, Vienna, Austria.  www.R-project.org.
 
@@ -566,7 +664,9 @@ Robinson R. Hansen W., and Orth K.  1995.  Evaluation of environmental investmen
 
 U.S. Army Corps of Engineers (USACE). 2000. Planning Guidance Notebook. ER-1105-2-100. U.S. Army Corps of Engineers, Washington, D.C.
 
-U.S. Army Corps of Engineers (USACE).  2011.  Assuring quality of planning models.  EC-1105-2-412. Washington, DC.  
+U.S. Army Corps of Engineers (USACE).  2011.  Assuring quality of planning models.  EC-1105-2-412. Washington, DC.
+
+Wiest S., Menichino G.T., and McKay S.K. *Forthcoming*. Riparian Ecosystem Function Index (REFI). ERDC Technical Report. U.S. Army Engineer Research and Development Center, Vicksburg, Mississippi. 
 
 
 # *Appendix A: Acronyms*   
@@ -580,6 +680,8 @@ U.S. Army Corps of Engineers (USACE).  2011.  Assuring quality of planning model
 
 
 # *Appendix B: Site-scale Alternatives*   
+
+Do we want to dump all of the ecological model inputs or outputs here? It makes for a huge set of tables, but it is a good practice for transparency and reproducibility. 
 
 ```{r}
 #Table of ecological benefits and costs.
